feat: Company admin profile and few fixes